--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "junitxml2subunit"
 version = "0.1.0"
 authors = ["Matthew Treinish <mtreinish@kortar.org>"]
+description = "A tool to convert junitxml files to subunit v2"
+license = "GPLv3"
+readme = "README.md"
+repository = "https://github.com/mtreinish/junitxml2subunit"
+keywords = ["subunit", "junitxml"]
+categories = ["development-tools::testing"]
 
 [dependencies]
 subunit-rust = "0.1.1"
