Fix license tag
The license tag in the project metadata was using GPLv3 instead of the
correct GPL-3.0 form. This commit corrects that issue so the metadata is
valid for cargo.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "junitxml2subunit"
 version = "0.1.0"
 authors = ["Matthew Treinish <mtreinish@kortar.org>"]
 description = "A tool to convert junitxml files to subunit v2"
-license = "GPLv3"
+license = "GPL-3.0"
 readme = "README.md"
 repository = "https://github.com/mtreinish/junitxml2subunit"
 keywords = ["subunit", "junitxml"]
