Add python cli testing to travis job
This commit adds support for running the newly added python cli tests to
the travis ci configuration for the repo. This will validate we don't
break anything with future changes.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,16 @@
 language: rust
 rust:
   - stable
+addons:
+  language:
+      python
 matrix:
   fast_finish: true
+  include:
+    - python: 3.6
+
+before_install:
+  - ./tests/travis-before-install.sh
+
+script:
+  - ./tests/travis-test.sh
