Add fmt and clippy to travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,6 @@ before_install:
   - ./tests/travis-before-install.sh
 
 script:
+  - cargo fmt --all -- --check
+  - cargo clippy
   - ./tests/travis-test.sh
