--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ matrix:
     - python: 3.6
 
 before_install:
+  - rustup component add rustfmt
+  - rustup component add clippy
   - ./tests/travis-before-install.sh
 
 script:
